[package]
name = "cloudflare-workers-kv-sdk-rs"
description = "Unofficial Cloudflare Workers KV SDK for Rust-Lang"
homepage = "https://github.com/GenshinMinecraft/cloudflare-workers-kv-sdk-rs"
repository = "https://github.com/GenshinMinecraft/cloudflare-workers-kv-sdk-rs"
documentation = "https://github.com/GenshinMinecraft/cloudflare-workers-kv-sdk-rs"
keywords = ["cloudflare", "workers", "database"]
categories = ["api-bindings", "asynchronous", "database"]
readme = "README.md"
version = "0.0.1"
edition = "2021"
license = "WTFPL"


[dependencies]
