[package]
name = "cloudflare-workers-kv-sdk-rs"
description = "Unofficial Cloudflare Workers KV SDK for Rust-Lang"
homepage = "https://github.com/GenshinMinecraft/cloudflare-workers-kv-sdk-rs"
repository = "https://github.com/GenshinMinecraft/cloudflare-workers-kv-sdk-rs"
documentation = "https://github.com/GenshinMinecraft/cloudflare-workers-kv-sdk-rs"
keywords = ["cloudflare", "workers", "database"]
categories = ["api-bindings", "asynchronous", "database"]
readme = "README.md"
version = "0.1.1"
edition = "2021"
license = "WTFPL"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
log = "0.4.22"
